--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: 1.20.3
+
+    - name: Go version
       run: go version
 
     - name: Set up environment variables
