--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,16 +22,14 @@ jobs:
     - name: Go version
       run: go version
 
-    - name: Set up environment variables
-      run: |
-        echo "OPENAI_TOKEN=${{ secrets.OPENAI_TOKEN }}" >> $GITHUB_ENV
-        echo "GOOGLE_TOKEN=${{ secrets.GOOGLE_TOKEN }}" >> $GITHUB_ENV
-        echo "GOOGLE_ENGINE_ID=${{ secrets.GOOGLE_ENGINE_ID }}" >> $GITHUB_ENV
-
     - name: Get dependencies
       run: go mod download
 
     - name: Run tests
+      env:
+        OPENAI_TOKEN: ${{ secrets.OPENAI_TOKEN }}
+        GOOGLE_TOKEN: ${{ secrets.GOOGLE_TOKEN }}
+        GOOGLE_ENGINE_ID: ${{ secrets.GOOGLE_ENGINE_ID }}
       run: go test -v ./...
 
     - name: Notify reviewer if tests pass
