--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,8 @@ jobs:
 
     - name: Run tests
       run: go test -v ./...
+      env:
+        OPENAI_TOKEN: ${{ secrets.OPENAI_TOKEN }}
 
     - name: Notify reviewer if tests pass
       if: ${{ success() }}
