--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,19 +22,13 @@ jobs:
     - name: Go version
       run: go version
 
-    - name: Set up environment variables
-      run: |
-        echo "GOOGLE_ENGINE_ID=${{ secrets.GOOGLE_ENGINE_ID }}" >> $GITHUB_ENV
-        echo "GOOGLE_TOKEN=${{ secrets.GOOGLE_TOKEN }}" >> $GITHUB_ENV
-        echo "OPENAI_TOKEN=${{ secrets.OPENAI_TOKEN }}" >> $GITHUB_ENV
-
     - name: Get dependencies
       run: go mod download
 
     - name: Run tests
       run: go test -v ./...
       env:
-        OPENAI_TOKEN: ${{ secrets.OPENAI_TOKEN }}
+        OPENAI_TOKEN: '${{ secrets.OPENAI_TOKEN }}'
 
     - name: Notify reviewer if tests pass
       if: ${{ success() }}
